# Java

./: DOCKER_TIMEOUT_FIX.md  README_EXAMEN_ML.md  REPONSES_EXAMEN_ML.md  SYMFONY_GZIP_GUIDE.md  docker-compose.yml  examen_ml_calculatrice.py
docker/logs/: .gitkeep
docker/nginx/: nginx.conf
docker/php/: php-fpm.conf  php.ini
opencv_tps/: CMakeLists.txt  Makefile  README.md  TP1.cpp  TP2.cpp
symfony-examples/: CatalogController_with_gzip.php  CatalogController_with_service.php
symfony-examples/Service/: CompressionService.php
